small refactors/ui improvments/bugfixes throughout all files added more comments